fix splitter covering scrollbar

--- a/web3/static/css/site_editor.css
+++ b/web3/static/css/site_editor.css
@@ -213,3 +213,11 @@ body.dark ::-webkit-scrollbar-thumb {
 body.dark .lm_header .lm_tab.lm_active {
     box-shadow: none;
 }
+.lm_splitter.lm_vertical .lm_drag_handle {
+    height: 15px;
+    top: 0px;
+}
+.lm_splitter.lm_horizontal .lm_drag_handle {
+    width: 15px;
+    left: 0px;
+}
